--- a/infrastructure/k8s/prod/auth.depl.yml
+++ b/infrastructure/k8s/prod/auth.depl.yml
@@ -14,24 +14,24 @@ spec:
     spec:
       containers:
         - name: auth
-          image: us.gcr.io/notifyme-307219/auth
+          image: allegany/auth
           env:
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-service:27017/auth'
             - name: REACT_APP_URL
-              value: 'https://www.christoffergranstedt.info'
+              value: 'https://notifyme.christoffergranstedt.com'
             - name: GITLAB_APP_ID
               value: '9d0041db3e685b41a679edb646339b7da355ebebbe59edc0e86f382c7da7f840'
             - name: GITLAB_APP_SECRET
               value: 'f2a19a4d26f28d43c5c935e2019ee8c90196a47c08677d86cd199a191b9afe69'
             - name: GITLAB_REDIRECT_URI
-              value: 'https://www.christoffergranstedt.info/api/accounts/gitlab/authenticate/callback'
+              value: 'https://notifyme.api.christoffergranstedt.com/api/accounts/gitlab/authenticate/callback'
             - name: SLACK_APP_ID
               value: '1753167503735.1753174200439'
             - name: SLACK_APP_SECRET
               value: '060bbf29314ed52bda0c507a5fa53328'
             - name: SLACK_REDIRECT_URI
-              value: 'https://www.christoffergranstedt.info/api/accounts/slack/authenticate/callback'
+              value: 'https://notifyme.api.christoffergranstedt.com/api/accounts/slack/authenticate/callback'
             - name: NATS_CLIENT_ID
               valueFrom:
                 fieldRef:
