--- a/infrastructure/k8s/prod/logging.depl.yml
+++ b/infrastructure/k8s/prod/logging.depl.yml
@@ -14,12 +14,12 @@ spec:
     spec:
       containers:
         - name: logging
-          image: us.gcr.io/notifyme-307219/logging
+          image: allegany/logging
           env:
             - name: MONGO_URI
               value: 'mongodb://auth-mongo-service:27017/logging'
             - name: REACT_APP_URL
-              value: 'https://www.christoffergranstedt.info'
+              value: 'https://notifyme.christoffergranstedt.com'
             - name: NATS_CLIENT_ID
               valueFrom:
                 fieldRef:
