--- a/infrastructure/k8s/prod/ingress.service.yml
+++ b/infrastructure/k8s/prod/ingress.service.yml
@@ -15,7 +15,6 @@ spec:
   tls:
   - hosts:
     - notifyme.api.christoffergranstedt.com
-    secretName: notifyme-app-tls
   rules:
     - host: notifyme.api.christoffergranstedt.com
       http:
@@ -36,3 +35,35 @@ spec:
             backend:
               serviceName: websocket-notification-service
               servicePort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
+    service.beta.kubernetes.io/do-loadbalancer-hostname: 'notifyme.api.christoffergranstedt.com'
+  labels:
+    helm.sh/chart: ingress-nginx-2.0.3
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx
+    app.kubernetes.io/version: 0.32.0
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/component: controller
+  name: ingress-nginx-controller
+  namespace: ingress-nginx
+spec:
+  type: LoadBalancer
+  externalTrafficPolicy: Local
+  ports:
+    - name: http
+      port: 80
+      protocol: TCP
+      targetPort: http
+    - name: https
+      port: 443
+      protocol: TCP
+      targetPort: https
+  selector:
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx
+    app.kubernetes.io/component: controller
